--- a/index.html
+++ b/index.html
@@ -3,142 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Light</title>
-    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
+    <title>Untitled</title>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
+        * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
             min-height: 100vh;
-            background-image: url('IMG_1763.JPG');
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            font-family: 'Space Mono', monospace;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            overflow: hidden;
-        }
-
-        .container {
-            text-align: center;
-            padding: 40px;
-        }
-
-        .glow-text {
-            font-size: clamp(3rem, 10vw, 8rem);
-            font-weight: 700;
-            color: #fff;
-            text-shadow:
-                0 0 10px rgba(255,255,255,0.8),
-                0 0 20px rgba(255,255,255,0.6),
-                0 0 40px rgba(255,255,255,0.4),
-                0 0 80px rgba(255,255,255,0.2);
-            letter-spacing: 0.2em;
-            animation: pulse 4s ease-in-out infinite;
-        }
-
-        .subtext {
-            font-size: clamp(0.8rem, 2vw, 1.2rem);
-            color: rgba(255,255,255,0.6);
-            margin-top: 30px;
-            letter-spacing: 0.5em;
-            text-transform: uppercase;
-            animation: fadeIn 2s ease-in-out;
-        }
-
-        @keyframes pulse {
-            0%, 100% {
-                text-shadow:
-                    0 0 10px rgba(255,255,255,0.8),
-                    0 0 20px rgba(255,255,255,0.6),
-                    0 0 40px rgba(255,255,255,0.4),
-                    0 0 80px rgba(255,255,255,0.2);
-            }
-            50% {
-                text-shadow:
-                    0 0 20px rgba(255,255,255,1),
-                    0 0 40px rgba(255,255,255,0.8),
-                    0 0 80px rgba(255,255,255,0.6),
-                    0 0 120px rgba(255,255,255,0.4);
-            }
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(20px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-
-        .cursor {
-            display: inline-block;
-            width: 3px;
-            height: 1em;
-            background: rgba(255,255,255,0.8);
-            margin-left: 5px;
-            animation: blink 1s infinite;
-            vertical-align: middle;
-        }
-
-        @keyframes blink {
-            0%, 50% { opacity: 1; }
-            51%, 100% { opacity: 0; }
-        }
-
-        /* Floating particles */
-        .particle {
-            position: fixed;
-            width: 4px;
-            height: 4px;
-            background: rgba(255,255,255,0.3);
-            border-radius: 50%;
-            animation: float 15s infinite;
-            pointer-events: none;
-        }
-
-        @keyframes float {
-            0%, 100% {
-                transform: translateY(100vh) rotate(0deg);
-                opacity: 0;
-            }
-            10% { opacity: 1; }
-            90% { opacity: 1; }
-            100% {
-                transform: translateY(-100vh) rotate(720deg);
-                opacity: 0;
-            }
+            background: url('IMG_1763.JPG') center/cover no-repeat fixed;
         }
     </style>
 </head>
 <body>
-    <!-- Floating particles -->
-    <div class="particle" style="left: 10%; animation-delay: 0s;"></div>
-    <div class="particle" style="left: 20%; animation-delay: 2s;"></div>
-    <div class="particle" style="left: 30%; animation-delay: 4s;"></div>
-    <div class="particle" style="left: 40%; animation-delay: 1s;"></div>
-    <div class="particle" style="left: 50%; animation-delay: 3s;"></div>
-    <div class="particle" style="left: 60%; animation-delay: 5s;"></div>
-    <div class="particle" style="left: 70%; animation-delay: 2.5s;"></div>
-    <div class="particle" style="left: 80%; animation-delay: 4.5s;"></div>
-    <div class="particle" style="left: 90%; animation-delay: 1.5s;"></div>
-
-    <div class="container">
-        <h1 class="glow-text">LIGHT<span class="cursor"></span></h1>
-        <p class="subtext">something is coming</p>
-    </div>
-
-    <script>
-        // Optional: mouse parallax effect
-        document.addEventListener('mousemove', (e) => {
-            const x = (e.clientX / window.innerWidth - 0.5) * 20;
-            const y = (e.clientY / window.innerHeight - 0.5) * 20;
-            document.body.style.backgroundPosition = `calc(50% + ${x}px) calc(50% + ${y}px)`;
-        });
-    </script>
 </body>
 </html>
