Zoom out - contain instead of cover

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
             min-height: 100vh;
-            background: url('IMG_1763.JPG') center/cover no-repeat fixed;
+            background: url('IMG_1763.JPG') center/contain no-repeat fixed;
+            background-color: #000;
         }
     </style>
 </head>
