--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
             min-height: 100vh;
-            background: url('IMG_1763.JPG') center/contain no-repeat fixed;
-            background-color: #000;
+            background: #000 url('IMG_1763.JPG') center center no-repeat;
+            background-size: 50%;
         }
     </style>
 </head>
