Add header to index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Untitled</title>
     <style>
+        <h1>Chuck's dumb page</h1>
+        <br>
+        
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
             min-height: 100vh;
