Update page title and header text

--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Untitled</title>
     <style>
-        <h1>Chuck's dumb page</h1>
-        <br>
         
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
@@ -14,8 +12,10 @@
             background: #000 url('IMG_1763.JPG') center center no-repeat;
             background-size: 50%;
         }
+        
     </style>
 </head>
+    <h1>Chuck's DRRRRPPPYYY pg.</h1>
 <body>
 </body>
 </html>
