Update title and glitch animation in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Code Art Gallery</title>
+    <title>Code+Art=GFAWllery</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
 
@@ -82,7 +82,7 @@
             animation: glitch-anim 0.3s infinite;
         }
         @keyframes glitch-anim {
-            0% { clip-path: inset(40% 0 61% 0); transform: translate(-4px, 4px); }
+            0% { clip-path: inset(65% 15 61% -15); transform: translate(-4px, 4px); }
             20% { clip-path: inset(92% 0 1% 0); transform: translate(1px, -1px); }
             40% { clip-path: inset(43% 0 1% 0); transform: translate(-1px, 2px); }
             60% { clip-path: inset(25% 0 58% 0); transform: translate(2px, 1px); }
